fixed my stupid decision to remove entire strings file through gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -40,5 +40,5 @@ captures/
 *.jks
 app/libs/
 
-# Strings
-app/src/main/res/values/strings.xml
+# Secret strings
+app/src/main/res/values/private_strings.xml
