--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,13 +46,14 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 
     compile 'io.github.luizgrp.sectionedrecyclerviewadapter:sectionedrecyclerviewadapter:1.0.4'
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
-    compile 'com.microsoft.azure:azure-mobile-android:3.1.0'
 }
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'me.tatarka.retrolambda'
