--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,19 +35,15 @@ dependencies {
 
     compile 'com.google.android.gms:play-services-auth:10.0.1'
 
-    // Firebase
-    compile 'com.google.firebase:firebase-core:10.0.1'
-    compile 'com.google.firebase:firebase-database:10.0.1'
-    compile 'com.google.firebase:firebase-crash:10.0.1'
-    compile 'com.google.firebase:firebase-auth:10.0.1'
-    compile 'com.google.firebase:firebase-storage:10.0.1'
-
     // Butter Knife
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
+    // Retrofit
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+
+    compile 'com.google.code.gson:gson:2.8.0'
 
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 
