--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,13 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
 
+    // Firebase
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-crash:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.firebase:firebase-storage:10.0.1'
+
     compile 'com.google.code.gson:gson:2.8.0'
 
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
