--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".AddRecipeActivity">
+        <activity android:name=".AddRecipeActivity"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
