--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".SplashscreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -39,8 +39,9 @@
         </activity>
         <activity
             android:name=".AddRecipeActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".AddIngredientsActivity"/>
+            android:screenOrientation="portrait" />
+        <activity android:name=".AddIngredientsActivity" />
+        <activity android:name=".InstructionsTagsActivity"></activity>
     </application>
 
 </manifest>
